fix(ZNTA-2148) fix alignment of notification heading icons and also the warning notification modal styling

--- a/server/zanata-frontend/src/frontend/app/styles/style.less
+++ b/server/zanata-frontend/src/frontend/app/styles/style.less
@@ -1889,7 +1889,7 @@ ol ol, ol ul, ul ol, ul ul {
 }
 
 h2.modal-title .list-inline {
-  vertical-align: baseline;
+  vertical-align: text-bottom;
   font-weight: 400;
 }
 
